# sakura

./: index.html  package.json  pnpm-lock.yaml
Sakura/: ContentView.swift  Item.swift  SakuraApp.swift
Sakura.xcodeproj/: project.pbxproj
Sakura.xcodeproj/xcuserdata/aemil.xcuserdatad/xcschemes/: xcschememanagement.plist
Sakura/Views/: ContentView.swift
SakuraTests/: SakuraTests.swift
SakuraUITests/: SakuraUITests.swift  SakuraUITestsLaunchTests.swift
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: app.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/mac/: mod.rs
